--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,10 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="/home/ponvel-pt-7323/mysql-connector-j-8.2.0.jar"/>
+	<classpathentry kind="lib" path="/home/ponvel-pt-7323/Downloads/jedis-4.4.6.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
